SWE-22 / SP-1090: Build project ui-test with Gradle
SVN: 30244